--- a/ros2_aruco/config/aruco_parameters.yaml
+++ b/ros2_aruco/config/aruco_parameters.yaml
@@ -1,7 +1,6 @@
 /aruco_node:
   ros__parameters:
-    marker_size: .0155
+    marker_size: 0.055
     aruco_dictionary_id: DICT_5X5_250
-    image_topic: /camera/color/image_raw
-    camera_info_topic: /camera/color/camera_info
-    camera_frame: camera_link
+    image_topic: /image_raw
+    camera_info_topic: /camera_info
